# reqsketch-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: core_benchmarks.rs
examples/: basic_usage.rs  req_rank_error.rs
src/: builder.rs  compactor.rs  error.rs  iter.rs  lib.rs  sorted_view.rs  test_all_quantiles.rs  test_comprehensive_rank_accuracy.rs  test_detailed_comparison.rs  test_error_bounds.rs  test_hra_rank_accuracy.rs  test_hra_vs_lra_quantiles.rs  test_rank_comparison.rs  test_rank_method.rs  test_simple_correctness.rs
tests/: algorithmic_correctness_tests.rs  correctness_tests.proptest-regressions  correctness_tests.rs  rust_3_sigma_detailed.rs  serde_roundtrip.rs  sigma_bounds_tests.rs  sigma_detailed.rs  sorted_view_api_test.rs
