[package]
name = "reqsketch"
version = "0.1.0"
edition = "2021"
description = "Relative Error Quantiles sketch"
license = "MIT OR Apache-2.0"
authors = ["Patrick McGleenon"]
readme = "README.md"
repository = "https://github.com/pmcgleenon/reqsketch-rs"
keywords = [ "req", "sketch", "quantiles", "streaming", "statistics", "approximation"]
categories = ["algorithms", "data-structures"]

[lib]
name = "reqsketch"
path = "src/lib.rs"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }
dhat = { version = "0.3", optional = true }

[dev-dependencies]
proptest = "1.0"
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
rand_distr = "0.4"

[features]
default = []
serde = ["dep:serde"]
dhat-heap = ["dhat"]

[profile.release]
debug = true
opt-level = 3
