[package]
name = "reqsketch"
version = "0.1.0"
edition = "2021"
description = "Relative Error Quantiles sketch"
license = "MIT OR Apache-2.0"
authors = ["Patrick McGleenon"]
readme = "README.md"
repository = "https://github.com/pmcgleenon/reqsketch-rs"
documentation = "https://docs.rs/reqsketch"
keywords = [ "req", "sketch", "quantiles"]
categories = ["algorithms", "data-structures"]
exclude = [".github"]

[lib]
name = "reqsketch"
path = "src/lib.rs"

[[bench]]
name = "core_benchmarks"
harness = false

[dependencies]
rand = "0.9"
serde = { version = "1.0", features = ["derive"], optional = true }
#dhat = { version = "0.3", optional = true }

[dev-dependencies]
proptest = "1.0"
approx = "0.5"
criterion = { version = "0.8", features = ["html_reports"] }
rand = "0.9"
rand_distr = "0.5"
# For plotting functionality:
plotters = "0.3"

[features]
default = []
serde = ["dep:serde"]
#dhat-heap = ["dhat"]

[profile.release]
debug = true
opt-level = 3
